--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,11 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-    - name: Test ssm-to-env local
+    - name: Test env variable(s) are set
       uses: ./
       id: ssm-to-env-local
       with:
         ssm-path: /actions-testing/test-parameter
-
-    - name: Run a multi-line script
       run: |
         echo "Testing if parameter values get set properly:"
-        printenv
+        printenv $test2
