--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
       id: ssm-to-env-local
       with:
         ssm-path: /actions-testing/test-parameter
+        prefix: 'ssm_testing_'
 
     - name: Test for Env Variables
       run: |
