Adding more workflow testing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,25 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-    - name: Test ssm-to-env local
+    - name: Test ssm-to-env local json
       uses: ./
       id: ssm-to-env-local
       with:
         ssm-path: /actions-testing/test-parameter
+        decryption: false
+
+    - name: Test ssm-to-env local encrypted
+      uses: ./
+      id: ssm-to-env-local
+      with:
+        ssm-path: /actions-testing/test-parameter-encrypted
+        decryption: true
+
+    - name: Test ssm-to-env local non-json
+      uses: ./
+      id: ssm-to-env-local
+      with:
+        ssm-path: /actions-testing/test-parameter-basic
         decryption: false
 
     - name: Test for Env Variables
