github: improving workflow and adding dependabot

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,9 @@ name: Local-Action-Test
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop, main ]
+  pull_request:
+    types: [opened, reopened, synchronize, edited]
 
 jobs:
   test:
