Add region input

--- a/action.yml
+++ b/action.yml
@@ -1,25 +1,27 @@
-name: 'AWS SSM parameters to environment variables'
-description: 'load AWS SSM Parameters into environment variables'
-author: 'Bardavon Health Innovations and Denny Biasiolli at IP Sentinel'
+name: "AWS SSM parameters to environment variables"
+description: "load AWS SSM Parameters into environment variables"
+author: "Bardavon Health Innovations and Denny Biasiolli at IP Sentinel"
 branding:
-  icon: 'cloud'
-  color: 'orange'
+  icon: "cloud"
+  color: "orange"
 inputs:
   ssm-path:
-    description: 'AWS SSM path for parameter (eg. `/ssm/parameter`)'
+    description: "AWS SSM path for parameter (eg. `/ssm/parameter`)"
     required: true
   get-children:
-    description: 'Define to get parameters by path, retrieving all children values'
+    description: "Define to get parameters by path, retrieving all children values"
     required: false
   prefix:
-    description: 'Set a prefix on the environment variable'
+    description: "Set a prefix on the environment variable"
     required: false
   decryption:
-    description: 'Whether the parameter must be decrypted or not'
+    description: "Whether the parameter must be decrypted or not"
     required: false
   mask-values:
-    description: 'Indicates if extracted values should be masked in GitHub action logs'
+    description: "Indicates if extracted values should be masked in GitHub action logs"
     required: false
+  aws-region:
+    description: "AWS SSM Region for parameter (eg. `eu-west-1`)"
 runs:
-  using: 'node20'
-  main: 'index.js'
+  using: "node20"
+  main: "index.js"
